--- a/src/TODO
+++ b/src/TODO
@@ -10,8 +10,9 @@ build:
 -add more warnings/errors!
 
 physics:
--more solids? surfaces?
+-rotations?? x_x
 
 bugs:
--sometimes things can get "inside" each other via weird collisions
 -hook can fly through objects because it advances too quickly
+-the hook can "retroactively" attach to things in the middle of the rope
+-bouncing off near-horizontal slopes when the slope's object is on a horizontal immobile doesn't work
