--- a/src/TODO
+++ b/src/TODO
@@ -13,6 +13,5 @@ physics:
 -rotations?? x_x
 
 bugs:
--hook can fly through objects because it advances too quickly
--the hook can "retroactively" attach to things in the middle of the rope
+-the hook can "retroactively" attach to things toward the end of the rope
 -bouncing off near-horizontal slopes when the slope's object is on a horizontal immobile doesn't work
