--- a/src/TODO
+++ b/src/TODO
@@ -13,5 +13,13 @@ physics:
 -rotations?? x_x
 
 bugs:
--the hook can "retroactively" attach to things toward the end of the rope
+-hook attaches in weird ways sometimes
 -bouncing off near-horizontal slopes when the slope's object is on a horizontal immobile doesn't work
+-bottomless pit?
+
+possible features:
+-turning the string into a (solid) rope (chain of constraints)
+-more physics: hinges (just a constraint), motor (rotating hinges), springs (yet another constraint)
+
+design:
+*ALL THE THINGS
