--- a/src/TODO
+++ b/src/TODO
@@ -15,6 +15,7 @@ physics:
 bugs:
 -hook attaches in weird ways sometimes
 -bouncing off near-horizontal slopes when the slope's object is on a horizontal immobile doesn't work
+-multi-onness on non-vertical/horizontal is possible because of floating point imprecision
 
 possible features:
 -turning the string into a (solid) rope (chain of constraints)
@@ -22,3 +23,8 @@ possible features:
 
 design:
 *ALL THE THINGS
+
+
+
+level launching (turn main loop into a function)
+text screens
